--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Make with g++ - Build and debug directory",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/raytracer",
+            "program": "${workspaceFolder}/raytracer",
             "args": [
                 "input/cornellbox.xml"
             ],
