--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
             "label": "Make",
             "command": "/usr/bin/make",
             "args": [
-                "all"
+                "debug"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
